--- a/Chalkable.Web/assets/jade/activities/grading/GradeLevelForTopBar.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradeLevelForTopBar.jade
@@ -1,6 +1,8 @@
-text = self.getId() ? parseInt(self.getName(), 10) : self.getName();
-serialPart = self.getSerial(number).slice(number.toString().length)
-+ActionLink(self.getController(), self.getAction(), self.getParams(), self.getId())(class=self.isPressed() ? "pressed " : "").item.class-button.button-link
-    SPAN.admin=text.toUpperCase()
-        if self.getId()
+needSerial = self.getId() && self.getId().valueOf() && parseInt(self.getName(), 10);
+text = needSerial ? parseInt(self.getName(), 10) : self.getName();
+if needSerial
+    serialPart = self.getSerial(text).slice(text.toString().length)
++ActionLink(self.getController(), self.getAction(), self.getParams(), self.getId())(class=self.isPressed() ? "pressed " : "", index=self.getIndex()).item.class-button.button-link
+    SPAN.admin=text
+        if needSerial
             SPAN=serialPart
