--- a/Chalkable.Web/assets/sass/partials/controls/_left-right-toolbar.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_left-right-toolbar.scss
@@ -105,6 +105,7 @@
             font: bold 38px Arial;
             padding-top: 17px;
             letter-spacing: -3px;
+            display: inline-block;
 
             >SPAN{
               font: normal 20px Pacifico;
@@ -128,6 +129,10 @@
             }
 
             .text-container{
+              color: #2f7790;
+            }
+
+            >SPAN.admin{
               color: #2f7790;
             }
           }
