--- a/Chalkable.Web/assets/sass/partials/main/search/_common.scss
+++ b/Chalkable.Web/assets/sass/partials/main/search/_common.scss
@@ -21,55 +21,9 @@ ul.ui-autocomplete{
         height: 70px;
         padding: 0;
 
-        >div.site-search-person{
-          margin-top: 20px;
+        >div.site-search-person, >div.site-search-class, >div.site-search-attachment{
+          margin-top: 10px;
           padding-left: 15px;
-          >img{
-            display: inline-block;
-            vertical-align: middle;
-          }
-          >div{
-            margin-left: 10px;
-            display: inline-block;
-            vertical-align: middle;
-            color: #2f424b;
-            font-size: 11px;
-            font-weight: bold;
-          }
-        }
-
-        >div.site-search-class{
-          margin-top: 20px;
-          padding-left: 15px;
-          >div.img-wrapper{
-            overflow: hidden;
-            height: 25px;
-            >img{
-              display: inline-block;
-              vertical-align: middle;
-            }
-          }
-          >div{
-            margin-left: 10px;
-            display: inline-block;
-            vertical-align: middle;
-            color: #2f424b;
-            font-size: 11px;
-            font-weight: bold;
-          }
-        }
-
-        >div.site-search-attachment{
-          margin-top: 20px;
-          padding-left: 15px;
-          >div.image{
-            display: inline-block;
-            vertical-align: middle;
-            background: url("images/feed/doc-icon.png");
-            background-size: 100% 100%;
-            width: 24px;
-            height: 36px;
-          }
           >div.title{
             margin-left: 10px;
             display: inline-block;
@@ -77,6 +31,54 @@ ul.ui-autocomplete{
             color: #2f424b;
             font-size: 11px;
             font-weight: bold;
+          }
+        }
+      }
+    }
+
+    >div.site-search{
+      >a{
+        >div.site-search-person{
+          >img{
+            display: inline-block;
+            vertical-align: middle;
+            width: 30px;
+            height: 40px;
+          }
+        }
+
+        >div.site-search-class{
+          >div.img-wrapper{
+            overflow: hidden;
+            width: 30px;
+            height: 40px;
+            >img{
+              display: inline-block;
+              vertical-align: middle;
+              width: 30px;
+              height: 80px;
+            }
+          }
+        }
+
+        >div.site-search-attachment{
+          >div.image{
+            display: inline-block;
+            vertical-align: middle;
+            background: url("images/feed/doc-icon.png");
+            background-size: 100% 100%;
+            width: 30px;
+            height: 40px;
+          }
+        }
+
+        >div.site-search-announcement{
+          >div.image{
+            display: inline-block;
+            vertical-align: middle;
+            background-size: 100% 100%;
+            width: 30px;
+            height: 40px;
           }
         }
       }
