--- a/Chalkable.Web/assets/jade/controls/left-right-tb.jade
+++ b/Chalkable.Web/assets/jade/controls/left-right-tb.jade
@@ -1,14 +1,25 @@
+//For multiple toolbar params should be Array of objects with properties "name" and "value" for creating hidden inputs
+
 mixin LeftRightToolbar(data, tplClass, controller, action, params)
-    configs = self.prepareData(data, attributes)
+    configs = self.prepareData(data, attributes, controller, action, params)
     .lr-toolbar(attributes)
         .A(class=configs.disablePrevButton ? configs.disabledClass : "").prev-button.arrow
         .first-container
             .second-container
                 each item,i in data
-                    -item.setPressed && item.setPressed(configs.selectedItemId == item.getId().valueOf());
+                    id = item.getId().valueOf();
+                    -item.setPressed && item.setPressed(configs.selectedIds ? ((!id && !configs.selectedIds.length) || configs.selectedIds.indexOf(id) > -1) : configs.selectedItemId == id);
                     -item.setDisabled && item.setDisabled(!configs.pressAfterClick);
                     -item.setIndex && item.setIndex(i);
-                    -if(controller){item.setController(controller);item.setAction(action);item.setParams(params || []);}
+                    if controller
+                        -item.setController(controller);
+                        -item.setAction(action);
+                        -item.setParams(params || []);
+                    //if configs.multiple && controller
+                        +ActionForm(controller, action)
+                            each param in params
+                                +Hidden(param.name, param.value)
+
                     +RenderWith(item, tplClass)
         .A(class=configs.disableNextButton ? configs.disabledClass : "").next-button.arrow
         if(configs.needDots)
