--- a/Chalkable.Web/assets/sass/partials/main/search/_common.scss
+++ b/Chalkable.Web/assets/sass/partials/main/search/_common.scss
@@ -21,7 +21,7 @@ ul.ui-autocomplete{
         height: 70px;
         padding: 0;
 
-        >div.site-search-person, >div.site-search-class, >div.site-search-attachment{
+        >div.site-search-person, >div.site-search-class, >div.site-search-attachment, >div.site-search-announcement{
           margin-top: 10px;
           padding-left: 15px;
           >div.title{
@@ -31,6 +31,7 @@ ul.ui-autocomplete{
             color: #2f424b;
             font-size: 11px;
             font-weight: bold;
+            width: 100px;
           }
         }
       }
@@ -52,9 +53,9 @@ ul.ui-autocomplete{
             overflow: hidden;
             width: 30px;
             height: 40px;
+            display: inline-block;
+            vertical-align: middle;
             >img{
-              display: inline-block;
-              vertical-align: middle;
               width: 30px;
               height: 80px;
             }
