--- a/Chalkable.Web/assets/jade/activities/apps/app-market.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-market.jade
@@ -13,7 +13,7 @@ mixin AppIconLink(app)
     .action-bar.not-transparent
         .container.panel-bg
             +ActionLink('appmarket', 'list').app-store.toolbar-btn App Store
-            +ActionLink('appmarket', 'myapps').my-apps.toolbar-btn My Apps
+            +ActionLink('appmarket', 'myApps').my-apps.toolbar-btn My Apps
     .app-screenshots-panel
         +Carousel()
     .apps
