--- a/Chalkable.Web/assets/jade/activities/apps/app-screenshots.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-screenshots.jade
@@ -11,12 +11,13 @@ mixin ScreenshotBox(id, url, pictureCls, screenshotIds, readOnly)
 
 
 mixin ScreenshotUploadBox(title, dimsX, dimsY, screenshots)
-    .upload-img-block
-        .top=dimsX + "px x " + dimsY + "px"
-        .bottom
-            button.simple-gray-button.file=title
-                +FileUpload('apps', 'uploadScreenshot', [screenshots.ids]).simple-gray-button
-            +ActionLink('apps', 'd', 'b') Download Template
+    if !screenshots.isReadOnly()
+        .upload-img-block
+            .top=dimsX + "px x " + dimsY + "px"
+            .bottom
+                button.simple-gray-button.file=title
+                    +FileUpload('apps', 'uploadScreenshot', [screenshots.ids]).simple-gray-button
+                +ActionLink('apps', 'd', 'b') Download Template
     +Hidden('appScreenshots', screenshots.ids)
     each item in self.items
         +ScreenshotBox(item.getPictureId(), item.getPictureUrl(), item.getPictureClass(), screenshots.ids, !item.isEditable())
