added discipline type in UI added base schoolPersonSettings in UI added admin settings

--- a/Chalkable.Web/assets/jade/sidebars/AdminSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/AdminSidebar.jade
@@ -13,7 +13,7 @@
         .buttons-row
             +ActionLink('grading', '').one-third-button.statistic(title="View Grades") Grades
             +ActionLink('app-market', 'list').one-third-button.apps(title="View Apps") Apps
-            +ActionLink('settings', 'dashboard').one-third-button.settings(title="View Settings") Settings
+            +ActionLink('settings', 'dashboardAdmin').one-third-button.settings(title="View Settings") Settings
         .buttons-row
             +ActionLink('attendance', 'summary').one-third-button.attendance(title="View Attendance") Attendance
             +ActionLink('discipline', 'list').one-third-button.discipline(title="View Discipline") Discipline
