--- a/Chalkable.Web/Views/Home/Admin.cshtml
+++ b/Chalkable.Web/Views/Home/Admin.cshtml
@@ -1,7 +1,7 @@
 ﻿@model dynamic
 
 @{
-    ViewBag.Title = "Teacher";
+    ViewBag.Title = "Admin";
     Layout = "~/Views/Shared/_RoleLayout.cshtml";
 }
 
