--- a/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
@@ -4,7 +4,7 @@
             +ActionLink('appmarket', 'list').app-store.toolbar-btn App Store
             +ActionLink('appmarket', 'myapps').my-apps.toolbar-btn My Apps
     .app-screenshots-panel
-        +Carousel()
+        +Carousel(self.getScreenshotPictures().getItems())
     .app-price-info
         .app-title
             h1=self.name
