--- a/Chalkable.Web/assets/jade/activities/apps/app-market.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-market.jade
@@ -15,7 +15,7 @@ mixin AppIconLink(app)
             +ActionLink('appmarket', 'list').app-store.toolbar-btn App Store
             +ActionLink('appmarket', 'myApps').my-apps.toolbar-btn My Apps
     .app-screenshots-panel
-        +Carousel()
+        +Carousel(self.firstApp.getScreenshotPictures().getItems())
     .apps
-        each app in self.items
+        each app in self.apps.getItems()
             +AppIconLink(app)
