--- a/Chalkable.Web/assets/sass/partials/controls/_carousel.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_carousel.scss
@@ -1,5 +1,8 @@
 .carousel{
-  margin-bottom: 10px;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 430px;
 
   .dots-container{
     text-align: center;
@@ -22,59 +25,57 @@
     }
   }
 
+  .picture-button{
+    top: 183px;
+    position: absolute;
+    width: image-width('app/photo-left.png');
+    height:image-height('app/photo-right.png');
+
+    &.picture-left{
+      left: 31px;
+      background: url(images/app/photo-left.png) 0 0 no-repeat;
+    }
+
+    &.picture-right{
+      right: 33px;
+      background: url(images/app/photo-right.png) 0 0 no-repeat;
+    }
+
+    &:hover{
+      opacity: 0.85;
+    }
+
+    &:active{
+      opacity: 0.7;
+    }
+  }
+
   .picture-container{
-    padding: 11px 12px;
+
     position: relative;
     text-align: center;
     width: 640px;
-    height: 390px !important;
+    height: 411px;
+    list-style: none;
     background: #f0f0f0;
     margin-left: 2px;
+    overflow: hidden;
     @include box-shadow(0 0 3px #a0a0a0);
 
-    .picture-button{
-      top: 183px;
-      position: absolute;
-      width: image-width('app/photo-left.png');
-      height:image-height('app/photo-right.png');
 
-      &.picture-left{
-        left: 31px;
-        background: url(images/app/photo-left.png) 0 0 no-repeat;
-      }
-
-      &.picture-right{
-        right: 33px;
-        background: url(images/app/photo-right.png) 0 0 no-repeat;
-      }
-
-      &:hover{
-        opacity: 0.85;
-      }
-
-      &:active{
-        opacity: 0.7;
-      }
-    }
 
     .img{
+      padding: 11px 12px;
+      float: left;
       width:640px;
       overflow: hidden;
       display: block;
-      height: 100% !important;
-      background: #a0a0a0;
-
-      >DIV{
-        height: 100% !important;
-        >A{
-          height: 100% !important;
-        }
-      }
+      height: 390px;
+      background: #f0f0f0;
 
       IMG{
         width:640px;
-        height: 100% !important;
-        margin-top: 0px !important;
+        height: 390px;
       }
     }
   }
