added student settings

--- a/Chalkable.Web/assets/jade/sidebars/StudentSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/StudentSidebar.jade
@@ -12,4 +12,4 @@
         .buttons-row
             +ActionLink('grading', '').one-third-button.statistic(title="View Grades") Grades
             +ActionLink('app-market', 'list').one-third-button.apps(title="View Apps") Apps
-            +ActionLink('settings', 'dashboardAdmin').one-third-button.settings(title="View Settings") Settings
+            +ActionLink('settings', 'dashboardStudent').one-third-button.settings(title="View Settings") Settings
