Backed out merge changeset: 52c9131733a2
Backed out merge revision to its first parent (e1aec87ae37b)

--- a/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
@@ -1,14 +1,13 @@
 .app-market-details
     .action-bar.not-transparent
-        .container.panel-bg.buttons-toolbar
+        .container.panel-bg
             +ActionLink('appmarket', 'list').app-store.toolbar-btn App Store
             +ActionLink('appmarket', 'myapps').my-apps.toolbar-btn My Apps
     .app-screenshots-panel
-        +Carousel(self.getScreenshotPictures().getItems())
+        +Carousel()
     .app-price-info
         .app-title
             h1=self.name
             span="By " + self.developerInfo.getName()
         .app-buy
-            +ActionLink('appmarket', 'install', [self.getId().valueOf()]).special-button.blue-button  Free
-        textarea(name = "app-description", class = "app-description")=self.description
+            +Button().special-button.blue-button Free
