--- a/Chalkable.Web/assets/jade/activities/apps/app-market.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-market.jade
@@ -11,11 +11,11 @@ mixin AppIconLink(app)
 
 .app-market
     .action-bar.not-transparent
-        .container.panel-bg.buttons-toolbar
+        .container.panel-bg
             +ActionLink('appmarket', 'list').app-store.toolbar-btn App Store
             +ActionLink('appmarket', 'myApps').my-apps.toolbar-btn My Apps
     .app-screenshots-panel
-        +Carousel(self.firstApp.getScreenshotPictures().getItems())
+        +Carousel()
     .apps
-        each app in self.apps.getItems()
+        each app in self.items
             +AppIconLink(app)
